# vaultex

./: .gitignore  README.md  pyproject.toml
vaultex/: __init__.py  __main__.py  app.py  core.py
vaultex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
